# cursor-emulator

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CURSOR_EMULATOR.md  Install.md  LICENSE  Makefile  Prompt.md  README.md  TEST_README.md  pyproject.toml  run_integration_tests.py  simple_test.py  test_background_processes.py  test_builtin_comparison.py  test_enhanced_search.py  test_integration.py  test_java_support.py  test_performance.py  test_runner.py  verify_schema.py
.cursor/rules/: 00-system-instructions.mdc  task-management.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  ide_integration.md
src/: server.py  types.py
src/state/: 01-task-management.mdc  persistence.py  store.py  utils.py  validators.py
src/tools/: apply_patch.py  codebase_search.py  codebase_search_ast.py  delete_file.py  fetch_pull_request.py  glob_file_search.py  grep.py  java_analyzer.py  multi_edit.py  read_lints.py  run_terminal_cmd.py  search_replace.py  task_write.py  todo_read.py  todo_write.py  update_memory.py  web_search.py
