[tool.setuptools]
packages = ["src", "src.state", "src.tools"]
package-data = { "src.state" = ["*.mdc"] }

[project]
name = "cursor-emulator"
version = "0.2.2"
description = "Universal AI Code Assistant - Transform any AI assistant into a powerful code assistant using local MCP server with 19 advanced tools including task management, terminal operations, code analysis, file operations, web search, and memory management."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Joe Haddad", email = "joehaddad129@gmail.com" }]
keywords = ["mcp", "cursor", "ai-assistant", "code-assistant", "terminal", "file-operations", "web-search", "memory-management", "universal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.8.1",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0"
]

[project.urls]
Homepage = "https://github.com/talatuyarer/cursor-emulator"
Repository = "https://github.com/talatuyarer/cursor-emulator"
Issues = "https://github.com/talatuyarer/cursor-emulator/issues"

[project.scripts]
cursor-emulator = "src.server:main"
